# nvgt.zip

./: .gitignore  app.py  const.py  consts.py  docker-compose.yml  dockerfile  license.md  pyproject.toml  readme.md
templates/: 404.html  commits.html  index.html
